<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/send_later_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:text="Date"
        android:textAlignment="center"
        android:gravity="center"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        app:layout_constraintBottom_toTopOf="@+id/send_later_set_time_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:editable="false" />


    <Button
        android:id="@+id/send_later_set_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set Date"
        app:layout_constraintBottom_toTopOf="@+id/send_later_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_later_date" />

    <TextView
        android:id="@+id/send_later_time"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:ems="10"
        android:inputType="time"
        android:text="Time"
        android:textAlignment="center"
        android:gravity="center"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        app:layout_constraintBottom_toTopOf="@+id/send_later_set_date_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_later_set_time_button" />

    <Button
        android:id="@+id/send_later_set_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set Time"
        app:layout_constraintBottom_toTopOf="@+id/send_later_set_date_and_time_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_later_time" />


    <Button
        android:id="@+id/send_later_set_date_and_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set Date and Time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_later_set_date_button" />
</android.support.constraint.ConstraintLayout>