...
                android:layout_marginRight="12dip"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:minHeight="50dp">

                <EditText
                    android:id="@+id/subject"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/message_compose_subject_hint"
                    android:inputType="textEmailSubject|textAutoCorrect|textCapSentences"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
...
                android:orientation="vertical" />

            <!-- We have to use "wrap_content" (not "0dip") for "layout_height", otherwise the
                 EditText won't properly grow in height while the user is typing the message -->
            <view
                class="com.fsck.k9.ui.EolConvertingEditText"
                android:id="@+id/message_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top"
                android:hint="@string/message_compose_content_hint"
                android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
...
