<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/search"
        android:icon="?attr/iconActionSearch"
        android:showAsAction="always"
        android:title="@string/search_action"/>
    <item
        android:id="@+id/check_mail"
        android:alphabeticShortcut="r"
        android:icon="?attr/iconActionRefresh"
        android:showAsAction="always"
        android:title="@string/check_mail_action"/>
    <item
        android:id="@+id/compose"
        android:alphabeticShortcut="c"
        android:icon="?attr/iconActionCompose"
        android:showAsAction="always"
        android:title="@string/compose_action"/>
    <item
        android:id="@+id/add_new_account"
        android:icon="?attr/iconActionAdd"
        android:showAsAction="ifRoom"
        android:title="@string/add_account_action"/>
    <item
        android:id="@+id/about"
        android:icon="?attr/iconActionAbout"
        android:title="@string/about_action"/>
    <item
        android:id="@+id/import_export"
        android:icon="?attr/iconActionImportExport"
        android:title="@string/import_export_action">
        <menu>
            <item
                android:id="@+id/export_all"
                android:title="@string/settings_export_all"/>
            <item
                android:id="@+id/import_settings"
                android:title="@string/settings_import"/>
        </menu>
    </item>
    <item
        android:id="@+id/mailing_lists"
        android:showAsAction="never"
        android:title="@string/mailing_lists"/>
    <item
        android:id="@+id/edit_prefs"
        android:icon="?attr/iconActionSettings"
        android:showAsAction="never"
        android:title="@string/preferences_action"/>

</menu>