...
        android:alphabeticShortcut="s"
        android:title="@string/send_action"
        android:icon="?attr/iconActionSend"
        android:showAsAction="always"
    />
    <item
        android:id="@+id/send_later"
        android:alphabeticShortcut="l"
        android:title="@string/send_later_action"
        android:icon="?attr/iconActionSendLater"
        android:showAsAction="always"
        />
    <item
...
