<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/drunk_mode_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:inputType="time"
        android:text="Start Time"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        app:layout_constraintBottom_toTopOf="@+id/drunk_mode_set_end_time_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:editable="false" />


    <Button
        android:id="@+id/drunk_mode_set_start_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set Start Time"
        app:layout_constraintBottom_toTopOf="@+id/drunk_mode_end_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drunk_mode_start_time" />

    <TextView
        android:id="@+id/drunk_mode_end_time"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="time"
        android:text="End Time"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        app:layout_constraintBottom_toTopOf="@+id/drunk_mode_set_start_time_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drunk_mode_set_end_time_button" />

    <Button
        android:id="@+id/drunk_mode_set_end_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set End Time"
        app:layout_constraintBottom_toTopOf="@+id/drunk_mode_set_time_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drunk_mode_end_time" />


    <Button
        android:id="@+id/drunk_mode_set_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set Time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drunk_mode_set_start_time_button" />
</android.support.constraint.ConstraintLayout>